Added remaining pages

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2699,7 +2699,7 @@
 		/* Banner */
 
 			#banner {
-				height: 24em;
+				/*height: 24em;*/
 			}
 
 	}
@@ -2743,7 +2743,7 @@
 		/* Banner */
 
 			#banner {
-				height: 20em;
+				/*height: 20em;*/
 			}
 
 		/* Wrapper */
@@ -2855,7 +2855,7 @@
 		/* Banner */
 
 			#banner {
-				height: 20em;
+				/*height: 20em;*/
 			}
 
 				#banner header h2 {
@@ -3130,7 +3130,7 @@
 		/* Banner */
 
 			#banner {
-				height: 18em;
+				/*height: 18em;*/
 			}
 
 		/* Wrapper */
@@ -3196,7 +3196,7 @@
 		/* Banner */
 
 			#banner {
-				height: 20em;
+				/*height: 20em;*/
 			}
 
 				#banner header {
