--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,12 +1,6 @@
 @import url("font-awesome.min.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,600,600italic");
 
-/*
-	Arcana by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
-
 /* Reset */
 
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
@@ -3253,3 +3247,62 @@
 			}
 
 	}
+
+	/* Sponsor Images  */
+.sponsor_img {
+ height: 45px;
+ width:100%;
+ overflow: hidden;
+ display: inline-block;
+ vertical-align: baseline;
+}
+.sponsor_img img {
+ height: 45px;
+ /*width: 120px;*/
+}
+
+/* Photo Gallery*/
+#photo-gallery {
+    width: 400px;
+    height: 250px;
+    overflow: hidden;
+    position: relative;
+
+    margin: 20px auto;
+}
+#photo-gallery img {
+    width: 400px;
+    height: 250px;
+
+    position: absolute;
+    top: 0;
+    left: -400px;
+
+		z-index: 1;
+		opacity: 0;
+
+		transition: all linear 500ms;
+		-o-transition: all linear 500ms;
+		-moz-transition: all linear 500ms;
+		-webkit-transition: all linear 500ms;
+}
+
+#photo-gallery img:target {
+    left: 0;
+    z-index: 9;
+    opacity: 1;
+}
+
+#photo-gallery img:first-child {
+    left: 0;
+}
+#gallery-slider a {
+    text-decoration: none;
+    background: #E3F1FA;
+    border: 1px solid #C6E4F2;
+    padding: 4px 6px;
+    color: #222;
+}
+#gallery-slider a:hover {
+    background: #C6E4F2;
+}
